--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+	<title>Site do Taiã</title>
         <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
 		
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
