--- a/index.html
+++ b/index.html
@@ -8,13 +8,7 @@
         <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
-		<a href='https://www.w3schools.com'>
-			<button id='help-button' type='text'>HELP</button>		
-		</a>
-		<br>
-		<br>
-		<br>
-		<button class='button-class' type='text'>Clique aqui</button>		
+		<button class='button-class' type='text'>Esconder quadrados</button>		
 		<div class='div-class' id="red"></div>
 		<div class='div-class' id="blue"></div>
 		<div class='div-class' id="yellow"></div>
